refactored, added jwt
