# api/routes/access_token.go
@@ -1,0 +1,32 @@
+package routes
+
+import (
+	"github.com/gofiber/fiber/v2"
+	"github.com/mahadevans87/short-url/helpers"
+)
+
+// GetNewAccessToken method for create a new access token.
+// @Description Create a new access token.
+// @Summary create a new access token
+// @Tags Token
+// @Accept json
+// @Produce json
+// @Success 200 {string} status "ok"
+// @Router /api/v1/token/new [get]
+func GetNewAccessToken(c *fiber.Ctx) error {
+	// Generate a new Access token.
+	token, err := helpers.GenerateNewAccessToken()
+	if err != nil {
+		// Return status 500 and token generation error.
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"error": true,
+			"msg":   err.Error(),
+		})
+	}
+
+	return c.JSON(fiber.Map{
+		"error":        false,
+		"msg":          nil,
+		"access_token": token,
+	})
+}
